compiler/tests/fail/duplicate_match_arm.afns
enum Color {
    Red;
    Green;
}

fn code(c: Color) -> i32 {
    return match c {
        Color.Red => 1,
        Color.Red => 2,
        Color.Green => 3,
    };
}
